src-tauri/check_ascii.txt
    Checking dappler v0.1.0 (C:\Users\alexa\Programme\dappler\src-tauri)
warning: unused import: `tokio::sync::Mutex`
 --> src\lib.rs:5:5
  |
5 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0283]: type annotations needed
   --> src\lib.rs:182:16
    |
182 |     state.conn.execute("DELETE FROM tasks WHERE task_id = ?", vec![id.into()])
    |                ^^^^^^^ cannot infer type for struct `std::vec::Vec<_>`
    |
    = note: multiple `impl`s satisfying `std::vec::Vec<_>: IntoParams` found in the `libsql` crate:
            - impl<T> IntoParams for std::vec::Vec<(std::string::String, T)>
              where T: IntoValue;
            - impl<T> IntoParams for std::vec::Vec<T>
              where T: IntoValue;
note: required by a bound in `Connection::execute`
   --> C:\Users\alexa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\libsql-0.6.0\src\connection.rs:119:57
    |
119 |     pub async fn execute(&self, sql: &str, params: impl IntoParams) -> Result<u64> {
    |                                                         ^^^^^^^^^^ required by this bound in `Connection::execute`

error[E0283]: type annotations needed
   --> src\lib.rs:182:5
    |
182 |     state.conn.execute("DELETE FROM tasks WHERE task_id = ?", vec![id.into()])
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for struct `std::vec::Vec<_>`
    |
    = note: multiple `impl`s satisfying `std::vec::Vec<_>: IntoParams` found in the `libsql` crate:
            - impl<T> IntoParams for std::vec::Vec<(std::string::String, T)>
              where T: IntoValue;
            - impl<T> IntoParams for std::vec::Vec<T>
              where T: IntoValue;
note: required by a bound in `Connection::execute`
   --> C:\Users\alexa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\libsql-0.6.0\src\connection.rs:119:57
    |
119 |     pub async fn execute(&self, sql: &str, params: impl IntoParams) -> Result<u64> {
    |                                                         ^^^^^^^^^^ required by this bound in `Connection::execute`

error[E0283]: type annotations needed
   --> src\lib.rs:238:10
    |
238 |         .query("SELECT task_id, task_time_start, task_time_end FROM tasks WHERE task_id != ?", vec![id.into()])
    |          ^^^^^ cannot infer type for struct `std::vec::Vec<_>`
    |
    = note: multiple `impl`s satisfying `std::vec::Vec<_>: IntoParams` found in the `libsql` crate:
            - impl<T> IntoParams for std::vec::Vec<(std::string::String, T)>
              where T: IntoValue;
            - impl<T> IntoParams for std::vec::Vec<T>
              where T: IntoValue;
note: required by a bound in `Connection::query`
   --> C:\Users\alexa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\libsql-0.6.0\src\connection.rs:160:55
    |
160 |     pub async fn query(&self, sql: &str, params: impl IntoParams) -> Result<Rows> {
    |                                                       ^^^^^^^^^^ required by this bound in `Connection::query`

error[E0283]: type annotations needed
   --> src\lib.rs:237:20
    |
237 |       let mut rows = state.conn
    |  ____________________^
238 | |         .query("SELECT task_id, task_time_start, task_time_end FROM tasks WHERE task_id != ?", vec![id.into()])
    | |_______________________________________________________________________________________________________________^ cannot infer type for struct `std::vec::Vec<_>`
    |
    = note: multiple `impl`s satisfying `std::vec::Vec<_>: IntoParams` found in the `libsql` crate:
            - impl<T> IntoParams for std::vec::Vec<(std::string::String, T)>
              where T: IntoValue;
            - impl<T> IntoParams for std::vec::Vec<T>
              where T: IntoValue;
note: required by a bound in `Connection::query`
   --> C:\Users\alexa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\libsql-0.6.0\src\connection.rs:160:55
    |
160 |     pub async fn query(&self, sql: &str, params: impl IntoParams) -> Result<Rows> {
    |                                                       ^^^^^^^^^^ required by this bound in `Connection::query`

For more information about this error, try `rustc --explain E0283`.
warning: `dappler` (lib) generated 1 warning
error: could not compile `dappler` (lib) due to 4 previous errors; 1 warning emitted
